--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "chokidar": "^0.12.6",
+    "copy-paste": "^1.0.1",
+    "moment": "^2.9.0",
     "string-format": "^0.5.0"
   }
 }
