--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chokidar": "^0.12.6",
     "copy-paste": "^1.0.1",
+    "linebyline": "0.0.7",
     "moment": "^2.9.0",
     "string-format": "^0.5.0"
   }
